--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/index.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="light">
 <head>
   <meta charset="utf-8">
-  <title>VLimatEduzApp</title>
+  <title>EduZ Platform</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
